--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   protobuf: ^3.1.0
   grpc: ^3.2.4
   connectivity_plus: ^5.0.2
+  dio: ^5.5.0+1
+  cached_network_image: ^3.3.1
+  visibility_detector: ^0.4.0+2
 
 
  
